--- a/playbook/deploy.yml
+++ b/playbook/deploy.yml
@@ -1,21 +1,30 @@
 ---
 - hosts: dev 
   vars:
-    pipeline_number: {{ lookup('env','BUILD_NUMBER') }}
-    download_folder: /apps/server
-    artificat_url: "http://10.202.129.81:8080/view/Roaster%20Pipeline/job/roaster_backend_build/{{ pipeline_number }}/artifact/target/universal/sample_project-0.1-1.noarch.rpm"
-    app_archive: "{{ download_folder }}/sample_project-0.1-1.noarch.rpm"
+    build_number: "{{ lookup('env','UPSTREAM_BUILD_NUMBER') }}"
+    dist_path: /apps/
+    src_file: "/var/lib/jenkins/jobs/roaster_backend_build/builds/{{ build_number }}/archive/target/rpm/RPMS/noarch/sample_project-0.1-1.noarch.rpm"
+    app_archive: "{{ dist_path }}/sample_project-0.1-1.noarch.rpm"
+  become: true
   tasks:
   - name: Create Server Directory
-    command: mkdir -p {{download_folder}}
+    command: mkdir -p {{dist_path}}
 
-  - name: Download App
-    get_url: url={{ download_url }}  dest={{ app_archive }}  validate_certs=no owner=root group=root mode=744
+  - name: Copy RPM
+    copy:
+      src: "{{ src_file }}"
+      dest: "{{ app_archive }}"
+      owner: root
+      group: root
+      mode: 0644
+
+  - name: Stop Old Service
+    command: service sample_project stop
 
   - name: Uninstall sample_project
-    become: true
     command: rpm -e sample_project-0.1-1.noarch
 
   - name: Deploy sample_project
-    become: true
     command: rpm -i {{ app_archive }}
+  - name: Delete Deployed RPM
+    command: rm {{ app_archive }}
